--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 streamlit==1.18.1
 faster-whisper==0.3.0
-librosa==0.10.1.post2
-numpy==1.23.5
+librosa==0.10.2
+numpy==1.24.2
 psutil==5.9.5
-torch==1.13.1
-onnxruntime==1.14.1
+torch==2.0.0
+onnxruntime==1.15.0
 streamlit-option-menu==0.3.1
 transformers==4.27.4
+altair==4.2.0
